--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Scrape all of an author's contributions to computerworld.co.nz",
   "main": "index.js",
   "scripts": {
+    "start": "npm install && node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
